--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "payment",
     "rest"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:xemware/nodechargify.git"
+  },
   "author": "Tim Shnaider",
-  "license": "BSD",
+  "license": "MIT",
   "dependencies": {
-    "request": "~2.25.0",
-    "dateformat": "~1.0.6-1.2.3",
-    "q": "~0.9.6",
-    "log4js": "~0.6.6",
-    "lodash": "~1.3.1",
+    "request": "",
+    "dateformat": "",
+    "q": "",
+    "log4js": "",
+    "lodash": "",
 	"node-schema-object": "git://github.com/TimNZ/node-schema-object.git"
   }
 }
